--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -278,9 +278,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bias] *",
+   "display_name": "Python [conda env:proba] *",
    "language": "python",
-   "name": "conda-env-bias-py"
+   "name": "conda-env-proba-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -292,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
