--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -278,7 +278,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:proba] *",
+   "display_name": "Python [conda env:proba]",
    "language": "python",
    "name": "conda-env-proba-py"
   },
