--- a/notebooks/experiment_2.ipynb
+++ b/notebooks/experiment_2.ipynb
@@ -9,9 +9,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "0ede2d9b",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cddfd562",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as onp\n",
     "import pandas as pd\n",
@@ -40,10 +42,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-12-22 18:49:49.300671: W external/org_tensorflow/tensorflow/compiler/xla/service/platform_util.cc:210] unable to create StreamExecutor for CUDA:0: failed initializing StreamExecutor for CUDA device ordinal 0: Internal: failed call to cuDevicePrimaryCtxRetain: CUDA_ERROR_OUT_OF_MEMORY: out of memory; total memory reported: 25443893248\n",
+      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gpu\n"
+      "cpu\n"
      ]
     }
    ],
@@ -64,18 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "3869fbfa",
    "metadata": {},
    "outputs": [],
    "source": [
     "import compute_pmass as pm\n",
-    "import compute_iter_metrics as cim"
+    "import compute_iter_metrics as cim\n",
+    "import large_mnl as lmnl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "1a498eb1",
    "metadata": {},
    "outputs": [],
@@ -100,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "e24e7c27",
    "metadata": {},
    "outputs": [],
@@ -252,14 +263,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "id": "0e47fb82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 0.0 s to compute true probabilities.\n"
+     ]
+    }
+   ],
    "source": [
     "deterministic = lmnl.get_probs(choosers, alts, coeffs, key, scale=2, utils=True)\n",
     "\n",
-    "random_err = onp.random.gumbel(0, 1, deterministic.shape)\n",
+    "random_err = onp.random.gumbel(0, 2, deterministic.shape)\n",
     "utils_true = deterministic + random_err\n",
     "true_choices = utils_true.argmax(axis=1)\n",
     "\n",
@@ -271,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "id": "8e76d009",
    "metadata": {},
    "outputs": [
@@ -279,8 +298,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 21s, sys: 5min 38s, total: 8min 59s\n",
-      "Wall time: 57.1 s\n"
+      "CPU times: user 1min 8s, sys: 1min 42s, total: 2min 51s\n",
+      "Wall time: 19.7 s\n"
      ]
     },
     {
@@ -291,22 +310,22 @@
        "Dep. Var.:                chosen   No. Observations:          7,500\n",
        "Model:         Multinomial Logit   Df Residuals:              7,495\n",
        "Method:       Maximum Likelihood   Df Model:                      5\n",
-       "Date:                 2021-12-05   Pseudo R-squ.:             0.941\n",
-       "Time:                      23:25   Pseudo R-bar-squ.:         0.941\n",
-       "AIC:                   6,695.267   Log-Likelihood:       -3,342.634\n",
-       "BIC:                   6,729.880   LL-Null:             -57,006.768\n",
+       "Date:                 2021-12-22   Pseudo R-squ.:             0.248\n",
+       "Time:                      18:50   Pseudo R-bar-squ.:         0.247\n",
+       "AIC:                  85,796.110   Log-Likelihood:      -42,893.055\n",
+       "BIC:                  85,830.724   LL-Null:             -57,006.768\n",
        "================================================================\n",
        "                 coef   std err         z     P>|z|   Conf. Int.\n",
        "----------------------------------------------------------------\n",
-       "dist_to_cbd   -1.9368     0.106   -18.312     0.000             \n",
-       "size_1         2.0327     0.063    32.414     0.000             \n",
-       "size_2         2.0436     0.058    35.417     0.000             \n",
-       "size_3         2.0240     0.035    57.801     0.000             \n",
-       "intx           2.0563     0.045    45.274     0.000             \n",
+       "dist_to_cbd   -0.9816     0.020   -50.137     0.000             \n",
+       "size_1         1.0065     0.012    82.182     0.000             \n",
+       "size_2         1.0037     0.010   101.219     0.000             \n",
+       "size_3         1.0177     0.010    97.164     0.000             \n",
+       "intx           0.9941     0.011    86.686     0.000             \n",
        "================================================================"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,8 +405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "781452a3",
+   "execution_count": 5,
+   "id": "2024383e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,14 +415,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "id": "4c1b76b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# num_alts = 200000\n",
     "pop_to_alts_ratio = 750 / 200\n",
-    "# num_choosers = int(pop_to_alts_ratio * num_alts)\n",
     "sample_rates = [.1, .2, .3, .4, .5, .6, .7, .8, .9, 1.0]\n",
     "scale_params = [.25, .5, .75, 1.0, 1.25, 1.5, 1.75]\n",
     "coeffs = np.array([-1, 1, 1, 1, 1])\n",
@@ -413,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "e653f35e",
    "metadata": {},
    "outputs": [
@@ -421,15 +438,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:31<00:00,  3.14it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:20<00:00,  2.47it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [02:29<00:00, 14.98s/it]\n"
+      "  0%|                                                                                                                          | 0/100 [00:01<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1735039/2811213484.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0miter_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mscale_param\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mscale_params\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m             scale_df = pm.run_v2(\n\u001b[0m\u001b[1;32m     12\u001b[0m                 \u001b[0mnum_alts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpop_to_alts_ratio\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_rates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoeffs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatched\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m                 scale=scale_param, debug=True, verbose=False)\n",
+      "\u001b[0;32m~/simulation_bias/scripts/compute_pmass.py\u001b[0m in \u001b[0;36mrun_v2\u001b[0;34m(num_alts, pop_to_alts_ratio, sample_rates, coeffs, key, batched, scale, debug, verbose)\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdebug\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 105\u001b[0;31m         assert np.isclose(\n\u001b[0m\u001b[1;32m    106\u001b[0m             all_prob_mass.sum(axis=1), num_choosers, rtol=3e-4).all()\n\u001b[1;32m    107\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "for num_alts in [200, 2000, 20000]:\n",
-    "    run_id = df['run_id'].max()\n",
+    "for num_alts in [2000]:\n",
+    "    if len(df) > 0:\n",
+    "        run_id = df['run_id'].max()\n",
+    "    else:\n",
+    "        run_id = 1\n",
     "    num_iters = alts_to_iters[num_alts]\n",
     "    for i in tqdm(range(num_iters)):\n",
     "        run_id += 1\n",
@@ -447,6 +477,36 @@
     "        df = pd.concat((df, iter_df), ignore_index=True)\n",
     "\n",
     "og_df = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "202b79db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[0;32m/home/mgardner/simulation_bias/scripts/compute_pmass.py\u001b[0m(105)\u001b[0;36mrun_v2\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m    103 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m    104 \u001b[0;31m    \u001b[0;32mif\u001b[0m \u001b[0mdebug\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m--> 105 \u001b[0;31m        assert np.isclose(\n",
+      "\u001b[0m\u001b[0;32m    106 \u001b[0;31m            all_prob_mass.sum(axis=1), num_choosers, rtol=3e-4).all()\n",
+      "\u001b[0m\u001b[0;32m    107 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "ipdb> all_prob_mass.sum(axis=1)\n",
+      "DeviceArray([741.30066, 738.8699 , 738.80066, 738.77313, 738.4298 ,\n",
+      "             737.7117 , 737.9765 , 737.8197 , 737.71326, 737.62555],            dtype=float32)\n",
+      "ipdb> all_prob_mass.shape\n",
+      "(10, 200)\n",
+      "ipdb> exit\n"
+     ]
+    }
+   ],
+   "source": [
+    "%debug"
    ]
   },
   {
@@ -485,16 +545,8 @@
     "    \"RMSE\",\n",
     "    \"MAPE\",\n",
     "    \"Std. Dev. Pct. Err.\",\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "20b9819e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "]\n",
+    "\n",
     "for col in metric_cols:\n",
     "    df[col] = df[col].astype(float).abs()"
    ]
