--- a/notebooks/test_disagg_interactions.ipynb
+++ b/notebooks/test_disagg_interactions.ipynb
@@ -38,13 +38,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -67,6 +60,26 @@
     "chooser_incomes = onp.random.normal(60000, 15000, 100000) ## 100k chooser incomes\n",
     "chooser_incomes = chooser_incomes / 100000\n",
     "chooser_incomes_reshaped = chooser_incomes.reshape((40, 2500))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11, 10098)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
    ]
   },
   {
@@ -253,9 +266,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:proba]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-proba-py"
   },
   "language_info": {
    "codemirror_mode": {
