chts models estimated, simulation started

--- a/notebooks/alt_sampling_methods.ipynb
+++ b/notebooks/alt_sampling_methods.ipynb
@@ -64,16 +64,8 @@
    "outputs": [],
    "source": [
     "import compute_pmass as pm\n",
-    "import compute_iter_metrics as cim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "14f030e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import compute_iter_metrics as cim\n",
+    "\n",
     "import large_mnl as lmnl"
    ]
   },
