--- a/notebooks/final_plots.ipynb
+++ b/notebooks/final_plots.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f61aa21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do i need an intercept??"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "12d29476",
    "metadata": {},
@@ -27,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "5d268a89",
    "metadata": {},
    "outputs": [],
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "4954cf56",
    "metadata": {},
    "outputs": [
@@ -58,7 +68,7 @@
        "Name: run_id, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
